todo menos rutas (PFFFFFFFFFFFFFF)

--- a/uimodule/webapp/index.html
+++ b/uimodule/webapp/index.html
@@ -19,6 +19,10 @@
             data-sap-ui-async="true"
             data-sap-ui-frameOptions="trusted"
         ></script>
+        <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmzJ3FvRUBuG6T-uc32IHOrxotozyca4s&callback=initMap&libraries=places"
+            type="text/javascript">
+        </script>
     </head>
 
     <body class="sapUiBody">
