--- a/uimodule/webapp/index.html
+++ b/uimodule/webapp/index.html
@@ -20,7 +20,7 @@
             data-sap-ui-frameOptions="trusted"
         ></script>
         <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmzJ3FvRUBuG6T-uc32IHOrxotozyca4s&callback=initMap&libraries=places"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmzJ3FvRUBuG6T-uc32IHOrxotozyca4s&libraries=places"
             type="text/javascript">
         </script>
     </head>
